--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "openfin-processes",
   "version": "0.0.0",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "description": "An exploration of OpenFin window processes",
   "repository": "git@github.com:owennw/openfin-processes.git",
   "author": "Nick Owen <nowen@scottlogic.co.uk>",
@@ -10,10 +10,11 @@
   "private": true,
   "scripts": {
     "commit": "git-cz",
-    "clean": "rimraf lib/",
+    "clean": "rimraf dist/",
     "prebuild": "yarn clean",
-    "build": "webpack --config ./build/webpack.config.js",
+    "build": "webpack --mode production",
     "lint": "tslint -p ./tsconfig.json",
+    "serve": "webpack-dev-server --port 8000 --mode development",
     "ci": "yarn lint"
   },
   "devDependencies": {
@@ -21,21 +22,33 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@types/node": "^10.12.2",
+    "@types/react": "^16.7.3",
     "babel-loader": "^8.0.4",
     "commitizen": "^3.0.4",
     "cz-conventional-changelog": "2.1.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.6",
     "webpack": "^4.25.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1"
   }
 }
