--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./lib/",
+    "outDir": "./dist/",
     "sourceMap": true,
     "declaration": true,
     "moduleResolution": "node",
     "module": "es6",
     "target": "es5",
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "jsx": "react"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
