--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@types/react": "^16.7.3",
     "babel-loader": "^8.0.4",
     "commitizen": "^3.0.4",
+    "css-loader": "^1.0.1",
     "cz-conventional-changelog": "2.1.0",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
@@ -46,9 +49,11 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "typeface-roboto": "^0.0.54"
   }
 }
