--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "webpack --mode production",
     "lint": "tslint -p ./tsconfig.json",
     "serve": "webpack-dev-server --port 8000 --mode development",
-    "ci": "yarn lint"
+    "ci": "yarn lint",
+    "openfin": "node openfin-launcher.js"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -28,6 +29,7 @@
     "@types/react": "^16.7.3",
     "babel-loader": "^8.0.4",
     "commitizen": "^3.0.4",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "cz-conventional-changelog": "2.1.0",
     "file-loader": "^2.0.0",
@@ -50,6 +52,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.5.1",
+    "openfin-launcher": "^1.4.8",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.1",
