--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "openfin-launcher": "^1.4.8",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
